# helper_bot

./: Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: python-package.yml
helper_bot/: helper_bot.py
inst_resizer/: inst_resizer.py
memento/: exceptions.py  notification.py
memento/events_consumer/: base_consumer.py  rabbit_mq_consumer.py
memento/events_producer/: base_producer.py
memento/facade/repository/: interface.py
memento/facade/repository/sqlite_repository/: __init__.py  _migration_create_notification_table.py  sqlite_repository.py
tests/: test_hello.py
tests/tests_facade/tests_repository/: test_sqlite_repository.py
