[tool.poetry]
name = "helper_bot"
version = "0.1.0"
description = ""
authors = ["Andrey A. Osipov <developer.osipov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.6.0"
defaultenv = "^0.0.14"
pillow = "^10.3.0"
sqlalchemy = "^2.0.31"
aiosqlite = "^0.20.0"
greenlet = "^3.0.3"


[tool.poetry.group.dev]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
mypy = "^1.10.0"
black = "^24.4.2"
flake8 = "^5.0.3"
pytest-sugar = "^1.0.0"
pytest-clarity = "^1.0.1"
coverage = "^7.5.1"
isort = "^5.13.2"
types-requests = "^2.32.0"
flake8-absolute-import = "^1.0"
Faker = "^24.8.0"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']

[flake8]
extend-ignore = 'E203'
max-line-length = 120
count = true
statistics = true